Full AI Compability for Freecam

--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -128,6 +128,13 @@
   "description.wurst.setting.follow.filter_minecarts": "Won't follow minecarts.",
   "description.wurst.hack.forceop": "Cracks AuthMe passwords.\nCan be used to get OP.",
   "description.wurst.hack.freecam": "Allows you to move the camera without moving your character.",
+  "description.wurst.setting.freecam.horizontal_speed": "How fast the Freecam moves horizontally.",
+  "description.wurst.setting.freecam.vertical_speed": "How fast the Freecam moves vertically.",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Use the mouse wheel to change Freecam speed.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Shows the current Freecam speed in the HackList.",
+  "description.wurst.setting.freecam.ai_compatibility": "Allows Baritone and Wurst's AI hacks (Tunneller, AutoFarm, AntiAFK, etc.) to control your player while you fly around with the camera.\nOnly physical keyboard/mouse input is blocked.",
+  "description.wurst.setting.freecam.tracer": "Draws a line from your camera to your real player position.",
+  "description.wurst.setting.freecam.disable_on_damage": "Disables Freecam when you take damage.",
   "description.wurst.hack.fullbright": "Allows you to see in the dark.",
   "description.wurst.hack.glide": "Makes you glide down slowly when falling.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
   "description.wurst.hack.handnoclip": "Allows you to reach specific blocks through walls.",
