--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -128,6 +128,13 @@
   "description.wurst.setting.follow.filter_minecarts": "Не следовать за вагонетками.",
   "description.wurst.hack.forceop": "Взламывает пароли AuthMe.\nМожет быть использовано для получения OP (админки).",
   "description.wurst.hack.freecam": "Позволяет перемещать камеру отдельно от вашего персонажа (свободная камера).",
+  "description.wurst.setting.freecam.horizontal_speed": "Скорость свободной камеры по горизонтали.",
+  "description.wurst.setting.freecam.vertical_speed": "Скорость свободной камеры по вертикали.",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Позволяет менять скорость свободной камеры колёсиком мыши.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Показывает текущую скорость свободной камеры в HackList.",
+  "description.wurst.setting.freecam.ai_compatibility": "Позволяет ИИ Wurst (Tunneller, AutoFarm, AntiAFK и т.д.) и Baritone управлять вашим персонажем, пока вы летаете камерой отдельно.\nБлокируется только физический ввод (клавиатура/мышь).",
+  "description.wurst.setting.freecam.tracer": "Рисует линию от камеры до реального положения персонажа.",
+  "description.wurst.setting.freecam.disable_on_damage": "Выключает свободную камеру при получении урона.",
   "description.wurst.hack.fullbright": "Позволяет видеть в темноте (как с зельем ночного зрения).",
   "description.wurst.hack.glide": "Заставляет вас медленно планировать вниз при падении.\n\n§c§lВНИМАНИЕ:§r Вы будете получать урон от падения, если не используете NoFall.",
   "description.wurst.hack.handnoclip": "Позволяет доставать до блоков сквозь стены.",
