--- a/src/main/resources/assets/wurst/translations/zh_cn.json
+++ b/src/main/resources/assets/wurst/translations/zh_cn.json
@@ -195,5 +195,171 @@
   "description.wurst.nochatreports.message_is_reportable": "此消息附加了有效的签名，因此容易受到批量举报的威胁。",
   "gui.wurst.generic.allcaps_blocked": "黑名单",
   "gui.wurst.generic.allcaps_allowed": "已允许",
-  "key.wurst.zoom": "缩放"
+  "key.wurst.zoom": "缩放",
+  "description.wurst.hack.instabuild": "类似 AutoBuild，但尝试在一个tick内建完整模板。\n只对非常简单的模板有效。",
+  "description.wurst.hack.macedmg": "使用重锤攻击时提高伤害。",
+  "description.wurst.hack.novignette": "移除暗角效果（屏幕边缘变暗）。",
+  "description.wurst.hack.templatetool": "允许你通过扫描现有建筑为 AutoBuild 创建自定义模板。",
+  "description.wurst.hack.veinminer": "自动挖掘矿脉。",
+  "description.wurst.other_feature.wurstoptions": "Wurst 的主要设置菜单。\n\n如果你删除了按键绑定导致无法打开 GUI，这里可以恢复它们。",
+  "description.wurst.setting.aimassist.aim_while_blocking": "在用盾牌格挡或使用物品时继续瞄准实体。",
+  "description.wurst.setting.aimassist.check_line_of_sight": "不会瞄准被方块遮挡的实体。",
+  "description.wurst.setting.aimassist.fov": "视野范围 - 实体与准星相距多远会被忽略。\n360° = 会瞄准你周围所有实体。",
+  "description.wurst.setting.aimassist.ignore_mouse_input": "在 AimAssist 瞄准时忽略部分鼠标输入，使你更难不小心偏离目标。",
+  "description.wurst.setting.airplace.guide": "显示方块将被放置的位置指引。",
+  "description.wurst.setting.airplace.guide_color": "启用时，放置指引的颜色。",
+  "description.wurst.setting.anchoraura.auto-place_anchors": "启用时，AnchorAura 会自动在有效实体附近放置重生锚。\n禁用时，AnchorAura 只会给手动放置的重生锚充能并引爆。",
+  "description.wurst.setting.anchoraura.check_line_of_sight": "放置或右键重生锚时确保不会隔墙操作。\n\n更慢，但可帮助对抗反作弊插件。",
+  "description.wurst.setting.anchoraura.face_target": "AnchorAura 面向重生锚的方式",
+  "description.wurst.setting.anchoraura.range": "决定 AnchorAura 放置、充能和引爆重生锚的范围。",
+  "description.wurst.setting.anchoraura.swing_hand": "设置 AnchorAura 在放置、充能和引爆重生锚时如何挥手。",
+  "description.wurst.setting.anchoraura.take_items_from": "设置从哪里寻找重生锚和萤石。",
+  "description.wurst.setting.antiafk.ai_range": "启用 AI 时 AntiAFK 可以移动的范围。",
+  "description.wurst.setting.antiafk.non-ai_range": "关闭 AI 时 AntiAFK 可以移动的范围。\n\n§c§l警告：§r 该区域必须完全没有障碍和危险。",
+  "description.wurst.setting.antiafk.show_wait_time": "在 HackList 中显示剩余等待时间。",
+  "description.wurst.setting.antiafk.use_ai": "使用寻路 AI 自然移动并避开危险。\n可能会偶尔卡住。",
+  "description.wurst.setting.antiafk.wait_time": "移动间隔时间（秒）。",
+  "description.wurst.setting.antiafk.wait_time_randomization": "可在等待时间上随机增加或减少的秒数。",
+  "description.wurst.setting.arrowdmg.strength": "效果强度。10 为 Minecraft 1.21 中的最高值。",
+  "description.wurst.setting.autofarm.check_line_of_sight": "种植与收获时确保不会隔墙操作。",
+  "description.wurst.setting.autofarm.face_target": "AutoFarm 种植与收获时的面向方式。",
+  "description.wurst.setting.autolibrarian.face_target": "AutoLibrarian 面向村民和工作站的方式。",
+  "description.wurst.setting.autolibrarian.swing_hand": "AutoLibrarian 与村民和工作站交互时挥手方式。",
+  "description.wurst.setting.bonemealaura.always_fastplace": "即使未启用 FastPlace，也像启用了一样使用骨粉。",
+  "description.wurst.setting.bonemealaura.check_los": "确保 BonemealAura 使用骨粉时不会隔墙操作。\n更慢，但可帮助对抗反作弊插件。",
+  "description.wurst.setting.bonemealaura.face_target": "BonemealAura 使用骨粉时的面向方式。",
+  "description.wurst.setting.bonemealaura.multimeal": "一次对多株作物使用骨粉。\n更快，但可能被反作弊检测。",
+  "description.wurst.setting.bonemealaura.swing_hand": "BonemealAura 使用骨粉时挥手方式。",
+  "description.wurst.setting.bonemealaura.take_items_from": "设置从哪里寻找骨粉。",
+  "description.wurst.setting.bonemealaura.use_while_breaking": "即使在破坏方块时也使用骨粉。\n可能只对外挂有效，原版不行。可能很可疑。",
+  "description.wurst.setting.bonemealaura.use_while_riding": "即使在骑乘载具时也使用骨粉。\n可能只对外挂有效，原版不行。可能很可疑。",
+  "description.wurst.setting.buildrandom.face_target": "BuildRandom 面向随机放置方块的方式。",
+  "description.wurst.setting.buildrandom.swing_hand": "BuildRandom 放置方块时挥手方式。",
+  "description.wurst.setting.chattranslator.detect_received_language": "自动检测收到消息的语言。\n\n当其他玩家使用多种语言时很有用。\n\n若所有人都用同一种语言，关闭可提高准确度。",
+  "description.wurst.setting.chattranslator.detect_sent_language": "自动检测发送消息的语言。\n\n当你混合使用多种语言时很有用。\n\n如果你一直用同一种语言，关闭可提高准确度。",
+  "description.wurst.setting.chattranslator.filter_own_messages": "不会翻译看起来由你发送的消息。\n\n它会基于常见聊天格式如 \"<name>\"、\"[name]\" 或 \"name:\" 来识别你的消息。在某些服务器上可能不准确。",
+  "description.wurst.setting.chattranslator.other_language": "服务器上其他玩家使用的主要语言。\n\n启用时，你发送的消息将始终被翻译为该语言。\n\n关闭“检测收到语言”后，所有收到的消息都会被假定为该语言。",
+  "description.wurst.setting.chattranslator.your_language": "你能使用并理解的主要语言。\n\n启用时，收到的消息将始终被翻译为此语言。\n\n关闭“检测发送语言”后，所有发送的消息都会被假定为此语言。",
+  "description.wurst.setting.crystalaura.face_target": "CrystalAura 面向末影水晶的方式。",
+  "description.wurst.setting.crystalaura.swing_hand": "CrystalAura 放置和引爆末影水晶时挥手方式。",
+  "description.wurst.setting.crystalaura.take_items_from": "设置从哪里寻找末影水晶。",
+  "description.wurst.setting.flight.allow_unsafe_vertical_speed": "允许在生存模式下垂直速度超过 3.95，这会导致即使启用 NoFall 也会受到摔落伤害。",
+  "description.wurst.setting.flight.anti-kick": "让你偶尔下坠一点，防止被踢出。",
+  "description.wurst.setting.flight.anti-kick_distance": "Anti-Kick 让你下坠的距离。\n多数服务器要求至少 0.032m 才不会被踢。",
+  "description.wurst.setting.flight.anti-kick_interval": "Anti-Kick 触发的间隔。\n多数服务器会在 80 tick 后踢人。",
+  "description.wurst.setting.flight.horizontal_speed": "Flight 的水平移动速度。",
+  "description.wurst.setting.flight.scroll_to_change_speed": "滚动鼠标滚轮改变速度。\n\n§l注意：§r启用后，飞行时滚轮不再切换快捷栏物品。",
+  "description.wurst.setting.flight.show_speed_in_hacklist": "在 HackList 中显示当前水平/垂直速度。",
+  "description.wurst.setting.flight.vertical_speed": "Flight 的垂直移动速度（相对于水平）。",
+  "description.wurst.setting.follow.filter_allays": "不会跟随悦灵。",
+  "description.wurst.setting.follow.filter_armor_stands": "不会跟随盔甲架。",
+  "description.wurst.setting.follow.filter_bats": "不会跟随蝙蝠及其他可能由模组添加的“环境”生物。",
+  "description.wurst.setting.follow.filter_endermen": "不会跟随末影人。",
+  "description.wurst.setting.follow.filter_flying": "不会跟随离地达到设定距离以上的玩家。",
+  "description.wurst.setting.follow.filter_golems": "不会跟随铁傀儡和雪傀儡。",
+  "description.wurst.setting.follow.filter_invisible": "不会跟随隐身实体。",
+  "description.wurst.setting.follow.filter_minecarts": "不会跟随矿车。",
+  "description.wurst.setting.follow.filter_neutral": "不会跟随中立生物，如末影人和狼。",
+  "description.wurst.setting.follow.filter_pets": "不会跟随驯服的狼、驯服的马等。",
+  "description.wurst.setting.follow.filter_players": "不会跟随其他玩家。",
+  "description.wurst.setting.follow.filter_shulkers": "不会跟随潜影贝。",
+  "description.wurst.setting.follow.filter_sleeping": "不会跟随正在睡觉的玩家。",
+  "description.wurst.setting.follow.filter_villagers": "不会跟随村民和流浪商人。",
+  "description.wurst.setting.follow.filter_zombie_piglins": "不会跟随僵尸猪灵。",
+  "description.wurst.setting.follow.filter_zombie_villagers": "不会跟随僵尸村民。",
+  "description.wurst.setting.freecam.apply_input_to": "Freecam 激活时键鼠输入的作用对象。",
+  "description.wurst.setting.freecam.apply_input_to.camera": "移动摄像机，角色保持不动。",
+  "description.wurst.setting.freecam.apply_input_to.player": "移动角色，摄像机保持不动。",
+  "description.wurst.setting.freecam.disable_on_damage": "受到伤害时自动关闭 Freecam。",
+  "description.wurst.setting.freecam.hide_hand": "使用 Freecam 时隐藏手和手持物品。",
+  "description.wurst.setting.freecam.horizontal_speed": "Freecam 的水平移动速度。\n\n当“§l将§l输入§l应用于§r”设为“§l玩家§r”时无效。",
+  "description.wurst.setting.freecam.initial_position": "启用 Freecam 时初始放置摄像机的位置。",
+  "description.wurst.setting.freecam.initial_position.above": "将摄像机向上移动一点以便看得更清楚。",
+  "description.wurst.setting.freecam.initial_position.in_front": "将摄像机向前移动一点以便看得更清楚。",
+  "description.wurst.setting.freecam.initial_position.inside": "保持摄像机原位。直到移动前只会看到角色内部。",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "滚动鼠标滚轮改变摄像机移动速度。\n\n当“§l将§l输入§l应用于§r”设为“§l玩家§r”时无效。",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "在 HackList 中显示当前摄像机水平/垂直速度。",
+  "description.wurst.setting.freecam.tracer": "绘制一条线指向角色的真实位置。",
+  "description.wurst.setting.freecam.vertical_speed": "Freecam 的垂直移动速度（相对于水平）。\n\n当“§l将§l输入§l应用于§r”设为“§l玩家§r”时无效。",
+  "description.wurst.setting.generic.face_target.client": "在客户端通过移动视角来面向目标。这是最“正常”的选项，但可能让人眼花。",
+  "description.wurst.setting.generic.face_target.off": "完全不面向目标。会被反作弊插件检测。",
+  "description.wurst.setting.generic.face_target.server": "在服务器端面向目标，同时允许客户端自由移动视角。",
+  "description.wurst.setting.generic.face_target.spam": "在服务器端面向目标并每次额外发送封包。可帮助绕过一些（有问题的）反作弊插件，但更可能导致被踢。",
+  "description.wurst.setting.generic.filter_allays_combat": "不会攻击悦灵。",
+  "description.wurst.setting.generic.filter_allays_vision": "不会显示悦灵。",
+  "description.wurst.setting.generic.filter_armor_stands_combat": "不会攻击盔甲架。",
+  "description.wurst.setting.generic.filter_armor_stands_vision": "不会显示盔甲架。",
+  "description.wurst.setting.generic.filter_bats_combat": "不会攻击蝙蝠及其他可能由模组添加的“环境”生物。",
+  "description.wurst.setting.generic.filter_bats_vision": "不会显示蝙蝠及其他可能由模组添加的“环境”生物。",
+  "description.wurst.setting.generic.filter_crystals_combat": "不会攻击末影水晶。",
+  "description.wurst.setting.generic.filter_endermen_combat": "设为 §lOn§r 时，完全不会攻击末影人。\n\n设为 §lIf calm§r 时，末影人只有先攻击后才会被攻击。注意：该过滤器无法判断末影人是在攻击你还是别人。\n\n设为 §lOff§r 时，此过滤器不起作用，末影人可被攻击。",
+  "description.wurst.setting.generic.filter_endermen_vision": "设为 §lOn§r 时，完全不会显示末影人。\n\n设为 §lIf calm§r 时，末影人只有在攻击某人后才会显示。\n\n设为 §lOff§r 时，此过滤器不起作用，末影人会被显示。",
+  "description.wurst.setting.generic.filter_flying_combat": "不会攻击离地达到设定距离以上的玩家。\n\n适用于那些通过在你附近放置飞行机器人来检测外挂的服务器。",
+  "description.wurst.setting.generic.filter_golems_combat": "不会攻击铁傀儡和雪傀儡。",
+  "description.wurst.setting.generic.filter_golems_vision": "不会显示铁傀儡和雪傀儡。",
+  "description.wurst.setting.generic.filter_invisible_combat": "不会攻击隐身实体。",
+  "description.wurst.setting.generic.filter_invisible_vision": "不会显示隐身实体。",
+  "description.wurst.setting.generic.filter_named_combat": "不会攻击有命名牌的实体。",
+  "description.wurst.setting.generic.filter_named_vision": "不会显示有命名牌的实体。",
+  "description.wurst.setting.generic.filter_neutral_combat": "设为 §lOn§r 时，中立生物完全不会被攻击。\n\n设为 §lIf calm§r 时，中立生物只有先攻击后才会被攻击。注意：该过滤器无法判断中立生物是在攻击你还是别人。\n\n设为 §lOff§r 时，此过滤器不起作用，中立生物可被攻击。",
+  "description.wurst.setting.generic.filter_neutral_vision": "设为 §lOn§r 时，中立生物完全不会显示。\n\n设为 §lIf calm§r 时，中立生物只有在攻击某人后才会显示。\n\n设为 §lOff§r 时，此过滤器不起作用，中立生物会被显示。",
+  "description.wurst.setting.generic.filter_pets_combat": "不会攻击驯服的狼、驯服的马等。",
+  "description.wurst.setting.generic.filter_pets_vision": "不会显示驯服的狼、驯服的马等。",
+  "description.wurst.setting.generic.filter_players_combat": "不会攻击其他玩家。",
+  "description.wurst.setting.generic.filter_players_vision": "不会显示其他玩家。",
+  "description.wurst.setting.generic.filter_shulker_bullets_combat": "不会攻击潜影贝子弹。",
+  "description.wurst.setting.generic.filter_shulkers_combat": "不会攻击潜影贝。",
+  "description.wurst.setting.generic.filter_shulkers_vision": "不会显示潜影贝。",
+  "description.wurst.setting.generic.filter_sleeping_combat": "不会攻击睡觉中的玩家。\n\n适用于 Mineplex 这类把睡觉玩家放地上伪装尸体的服务器。",
+  "description.wurst.setting.generic.filter_sleeping_vision": "不会显示睡觉中的玩家。",
+  "description.wurst.setting.generic.filter_villagers_combat": "不会攻击村民和流浪商人。",
+  "description.wurst.setting.generic.filter_villagers_vision": "不会显示村民和流浪商人。",
+  "description.wurst.setting.generic.filter_zombie_piglins_combat": "设为 §lOn§r 时，僵尸猪灵完全不会被攻击。\n\n设为 §lIf calm§r 时，僵尸猪灵只有先攻击后才会被攻击。注意：该过滤器无法判断僵尸猪灵是在攻击你还是别人。\n\n设为 §lOff§r 时，此过滤器不起作用，僵尸猪灵可被攻击。",
+  "description.wurst.setting.generic.filter_zombie_piglins_vision": "设为 §lOn§r 时，僵尸猪灵完全不会显示。\n\n设为 §lIf calm§r 时，僵尸猪灵只有在攻击某人后才会显示。\n\n设为 §lOff§r 时，此过滤器不起作用，僵尸猪灵会被显示。",
+  "description.wurst.setting.generic.filter_zombie_villagers_combat": "不会攻击僵尸村民。",
+  "description.wurst.setting.generic.filter_zombie_villagers_vision": "不会显示僵尸村民。",
+  "description.wurst.setting.generic.swing_hand.client": "在客户端挥手。这是最“正常”的选项。",
+  "description.wurst.setting.generic.swing_hand.off": "完全不挥手。会被反作弊插件检测。",
+  "description.wurst.setting.generic.swing_hand.server": "在服务器端挥手，但客户端不播放动画。",
+  "description.wurst.setting.generic.swing_hand_combat": "设置 %s 攻击时挥手方式。",
+  "description.wurst.setting.generic.swing_hand_mining": "设置 %s 挖掘时挥手方式。",
+  "description.wurst.setting.generic.take_items_from.hands": "只使用手上已有的物品，不会移动任何物品。",
+  "description.wurst.setting.generic.take_items_from.hotbar": "在快捷栏中寻找物品，找到后自动选中。",
+  "description.wurst.setting.generic.take_items_from.inventory": "在整个背包中寻找物品，找到后移动到快捷栏并选中。",
+  "description.wurst.setting.kaboom.particles": "是否显示爆炸粒子。不影响方块破坏。只有你能看到。",
+  "description.wurst.setting.kaboom.power": "决定每个方块发送多少组破坏封包。\n\n数值越高越容易破坏更多方块，但也会增加服务器负载。小服务器在高数值时可能崩溃。",
+  "description.wurst.setting.kaboom.sound": "是否播放爆炸声音。不影响方块破坏。只有你能听到。",
+  "description.wurst.setting.mobspawnesp.day_color": "在白天也会生成怪物的位置的 X 颜色。",
+  "description.wurst.setting.mobspawnesp.hitbox_check": "通过忽略太小的黑暗区域来提高 MobSpawnESP 的准确性，但也可能影响性能和稳定性。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.off": "不进行碰撞箱检测。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.slow": "同步碰撞箱检测。一般不会崩溃，但对性能影响很大。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.unstable": "快速但不稳定的碰撞箱检测，有时会导致崩溃。",
+  "description.wurst.setting.mobspawnesp.night_color": "夜晚会生成怪物的位置的 X 颜色。",
+  "description.wurst.setting.nofall.allow_elytra": "在使用鞘翅飞行时也尝试防止摔落伤害。\n\n§c§l警告：§r 有时可能会导致飞行意外中断。",
+  "description.wurst.setting.nofall.min_elytra_fall_distance": "使用鞘翅飞行时，NoFall 触发的最小下落距离。通过忽略不会造成明显伤害的小幅下落，让 NoFall 更难被检测并避免飞行中断。\n\nMinecraft 1.21.4 存在一个 bug，会将下落距离锁定为 0，因此在 1.21.4 服务器上你可能需要将此项设为 0（关闭）。",
+  "description.wurst.setting.nofall.min_fall_distance": "NoFall 触发的最小下落距离。通过忽略不会造成伤害的小幅下落，使 NoFall 更难被检测。\n\nMinecraft 1.21.4 存在一个 bug，会将下落距离锁定为 0，因此在 1.21.4 服务器上你可能需要将此项设为 0（关闭）。",
+  "description.wurst.setting.nofall.pause_for_mace": "手持重锤时暂停 NoFall，以便利用重锤的下落距离加成。\n\n§c§l警告：§r 手持重锤时不会受到摔落保护。同时在下落过程中切换到/离开重锤会打断下落，可能导致受伤。",
+  "description.wurst.setting.remoteview.filter_allays": "不会观看悦灵。",
+  "description.wurst.setting.remoteview.filter_armor_stands": "不会观看盔甲架。",
+  "description.wurst.setting.remoteview.filter_bats": "不会观看蝙蝠及其他可能由模组添加的“环境”生物。",
+  "description.wurst.setting.remoteview.filter_endermen": "不会观看末影人。",
+  "description.wurst.setting.remoteview.filter_flying": "不会观看离地达到设定距离以上的玩家。",
+  "description.wurst.setting.remoteview.filter_golems": "不会观看铁傀儡和雪傀儡。",
+  "description.wurst.setting.remoteview.filter_invisible": "不会观看隐身实体。",
+  "description.wurst.setting.remoteview.filter_neutral": "不会观看中立生物，如末影人和狼。",
+  "description.wurst.setting.remoteview.filter_pets": "不会观看驯服的狼、驯服的马等。",
+  "description.wurst.setting.remoteview.filter_players": "不会观看其他玩家。",
+  "description.wurst.setting.remoteview.filter_shulkers": "不会观看潜影贝。",
+  "description.wurst.setting.remoteview.filter_sleeping": "不会观看睡觉中的玩家。",
+  "description.wurst.setting.remoteview.filter_villagers": "不会观看村民和流浪商人。",
+  "description.wurst.setting.remoteview.filter_zombie_piglins": "不会观看僵尸猪灵。",
+  "description.wurst.setting.remoteview.filter_zombie_villagers": "不会观看僵尸村民。",
+  "description.wurst.setting.treebot.face_target": "TreeBot 砍伐时面向原木和树叶的方式。",
+  "description.wurst.setting.treebot.swing_hand": "TreeBot 砍伐原木和树叶时挥手方式。",
+  "description.wurst.setting.triggerbot.swing_hand": "TriggerBot 攻击时的挥手方式。（若启用“模拟鼠标点击”，该设置无效。）",
+  "description.wurst.setting.wurstoptions.location": "“Wurst Options”按钮的显示位置。",
+  "gui.wurst.generic.ctrl_left_click_for_precise_input": "§e[ctrl]§r+§e[左键]§r 进行精确输入",
+  "gui.wurst.generic.left_click_to_edit": "§e[左键]§r 编辑",
+  "gui.wurst.generic.right_click_to_reset": "§e[右键]§r 重置",
+  "gui.wurst.generic.unknown_block": "§o未知方块§r"
 }
